# eliittilukio-backend

./: Caddyfile  Caddyfile-prod  Cargo.toml  Dockerfile  README.md  compose-prod.yaml  compose-test.yaml  compose.yaml  database.sql
.sqlx/: query-15af175d789b7dcd0d01e1ccc6613e4dc665d1d26e072c2d072b685e96470568.json  query-2353af4c7379407f93ee7657c3ac031dc500a60d9847f4a08daece4bf7474d61.json  query-2980e9b0638ee8ee38e06a997236b4ea7cc277ce7c18791bb8cc7373fb7351aa.json  query-472358761b5d3014c72e6d5dbad5ff6a779754362e6ba77edb1382a270c2d284.json  query-4f9ae925792fecaf650a36564a515bea0ecba3e5114b57bde13657952b0e9e3c.json  query-77b4484dcad5afec6d3c9769f3047ba75a6532038cc60845b28b0d17845e02e9.json  query-c17edb7335ed7f3dcf52f9c7c4cb6e1e9ce71a84c55fa4561d6c1d7f269c9884.json
src/: database.rs  mail.rs  main.rs  schema.sql  user.rs  user_api.rs  util.rs
