[package]
name = "oispaeliiti-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
dotenv = "0.15.0"
lettre = { version = "0.10.4", features = ["rustls-tls", "smtp-transport", "builder"], default-features = false }
